force-app/main/default/objects/Volunteer_Service__c/Volunteer_Service__c.object-meta.xml
<CustomObject>
    <description>Represents a service offered by a volunteer</description>
    <label>Volunteer Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>