force-app/main/default/objects/Volunteer_Service__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the service offered</description>
    <inlineHelpText>Provide a detailed description of the service you are offering</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>