force-app/main/default/objects/Volunteer_Service__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>The volunteer offering this service</description>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Services</relationshipLabel>
    <relationshipName>Volunteer_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>